[gd_scene load_steps=5 format=2]

[ext_resource path="res://bolaFuego.gd" type="Script" id=1]
[ext_resource path="res://Sprites/cenisas.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Luz.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=4]
radius = 40.157

[node name="bolaFuego" type="Node2D"]
position = Vector2( 65.0357, 60.6095 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.903534, -0.702621 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2Dfueg" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2Dfueg"]
position = Vector2( 2.095, -0.698334 )
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Sprite"]
position = Vector2( 3.93451, -1.90163 )

[node name="Light2D" type="Light2D" parent="Sprite"]
position = Vector2( -0.903534, 0.702621 )
texture = ExtResource( 3 )
texture_scale = 3.58
shadow_enabled = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -3.05176e-005, -1.89999 )
[connection signal="body_entered" from="Sprite/Area2Dfueg" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="Sprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
